--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
     <title>Meet Our Team</title>
 </head>
 <body>
+    <header>
+        <h1>Meet Our Team</h1>
+    </header>
     
+    <main>
+        <span id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a totam, sed excepturi ducimus quam veritatis modi accusamus est soluta velit consectetur molestias, dolorem illo numquam libero recusandae quos ea.</span>
+
+        <div id="card">
+            <div class="img-card">
+                <img src="img/male1.png" alt="">
+                <h3>MARCO BIANCHI</h3>
+                <p>Designer</p>
+                <p class="email">marcobianchi@team.com</p>
+            </div>
+            <div class="img-card">
+                <img src="img/female1.png" alt="">
+                <h3>LAURA ROSSI</h3>
+                <p>Front-end Developer</p>
+                <p class="email">laurarossi@team.com</p>
+            </div>
+            <div class="img-card">
+                <img src="img/male2.png" alt="">
+                <h3>GIORGIO VERDI</h3>
+                <p>Back-end Developer</p>
+                <p class="email">giorgioverdi@team.com</p>
+            </div>
+            <div class="img-card">
+                <img src="img/female2.png" alt="">
+                <h3>MARTA IPSUM</h3>
+                <p>SEO Specialist</p>
+                <p class="email">martaipsum@team.com</p>
+            </div>
+            <div class="img-card">
+                <img src="img/male3.png" alt="">
+                <h3>ROBERTO LOREM</h3>
+                <p>Project Manager</p>
+                <p class="email">robertolorem@team.com</p>
+            </div>
+            <div class="img-card">
+                <img src="img/female3.png" alt="">
+                <h3>DANIELA AMET</h3>
+                <p>Analyst</p>
+                <p class="email">danielaamet@team.com</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
