add comments and css optimization

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,41 +13,41 @@
     </header>
     
     <main>
-        <span id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a totam, sed excepturi ducimus quam veritatis modi accusamus est soluta velit consectetur molestias, dolorem illo numquam libero recusandae quos ea.</span>
+        <p id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a totam, sed excepturi ducimus quam veritatis modi accusamus est soluta velit consectetur molestias, dolorem illo numquam libero recusandae quos ea.</p>
 
-        <div id="card">
-            <div class="img-card">
-                <img src="img/male1.png" alt="">
-                <h3>MARCO BIANCHI</h3>
-                <p>Designer</p>
-                <p class="email">marcobianchi@team.com</p>
+        <div> <!-- div che contiene le card e si compone di: -->
+            <div class="img-card"> <!-- div con classe per modificare le varie parti -->
+                <img src="img/male1.png" alt="male1"> <!-- immagine del componente del team -->
+                <h3>MARCO BIANCHI</h3> <!-- nome del componente del team -->
+                <p>Designer</p> <!-- ruolo del componente del team -->
+                <p class="email">marcobianchi@team.com</p> <!-- email del componente del team -->
             </div>
             <div class="img-card">
-                <img src="img/female1.png" alt="">
+                <img src="img/female1.png" alt="female1">
                 <h3>LAURA ROSSI</h3>
                 <p>Front-end Developer</p>
                 <p class="email">laurarossi@team.com</p>
             </div>
             <div class="img-card">
-                <img src="img/male2.png" alt="">
+                <img src="img/male2.png" alt="male2">
                 <h3>GIORGIO VERDI</h3>
                 <p>Back-end Developer</p>
                 <p class="email">giorgioverdi@team.com</p>
             </div>
             <div class="img-card">
-                <img src="img/female2.png" alt="">
+                <img src="img/female2.png" alt="female2">
                 <h3>MARTA IPSUM</h3>
                 <p>SEO Specialist</p>
                 <p class="email">martaipsum@team.com</p>
             </div>
             <div class="img-card">
-                <img src="img/male3.png" alt="">
+                <img src="img/male3.png" alt="male3">
                 <h3>ROBERTO LOREM</h3>
                 <p>Project Manager</p>
                 <p class="email">robertolorem@team.com</p>
             </div>
             <div class="img-card">
-                <img src="img/female3.png" alt="">
+                <img src="img/female3.png" alt="female3">
                 <h3>DANIELA AMET</h3>
                 <p>Analyst</p>
                 <p class="email">danielaamet@team.com</p>
